# qtwave

./: .gitignore  CMakeLists.txt  default.nix  flake.nix
qml/: waveforms.qml
src/: freezetablewidget.cpp  freezetablewidget.h  mainwindow.cpp  mainwindow.h  vcdparser.cpp  vcdparser.h  waveformdelegate.cpp  waveformdelegate.h  waveformitem.cpp  waveformitem.h  wavescene.cpp  wavescene.h
